2003-02-26  Matthias Clasen  <maclas@gmx.de>

	* glib/gunidecomp.c (g_unicode_canonical_decomposition): Use
	g_malloc instead of directly using malloc.

2003-02-25  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add a couple of missing entries, thanks to Cedric
	Gustin. Thread initialization function changes according to
	Sebastian Wilhelmi's changes below (2003-02-14).

2003-02-24  Matthias Clasen  <maclas@gmx.de>

	* glib/gdir.c (g_dir_read_name): Clarify documentation.

2003-02-18  Sebastian Wilhelmi  <seppi@seppi.de>

	* configure.in: Make glib_thread_test not unnecessarily convert
	between int and void*. (#106278). Let main return int.

	* configure.in: Add an argument to specify the default thread
	attribute to glib_thread_test. Disappeared somewhere between 2.0
	and 2.2.

2003-02-14  Sebastian Wilhelmi  <seppi@seppi.de>

	Fixes for #101264 and #99372:

	* glib/gconvert.h, glib/gmain.c, glib/gmem.c, glib/gmessages.c,
	glib/grand.c: Include gthreadinit.h and rename the thread
	initialization functions a bit and let them start with _, so that
	later we can stop exporting them.
	
	* glib/gmem.c, glib/gmessages.c: Move the g_private_new() calls to
	new functions. They have to be called after setting
	g_threads_got_initialized to TRUE (see #101264).

	* glib/gthread.c: Include gthreadinit.h. Renamed g_mutex_init() to
	g_thread_init_glib(). Call the thread initialization functions
	(which are not allowed to call g_private_new), then set
	g_threads_got_initialized to TRUE, then call the other thread
	initialization functions (which must not call anything but
	g_private_new()).
	
	* glib/gthreadinit.h: New private header to cleanly declare all
	thread initialization functions.

	* gthread/gthread-impl.c: Include gthreadinit.h. In
	g_thread_init() just call g_thread_init_glib(), which in turn calls the
	other functions (see #99372).
 	
	* glib/Makefile.am: Added gthreadinit.h.

2003-02-12  Sebastian Wilhelmi  <seppi@seppi.de>
